# pyquote

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements_dev.txt
pyquote/: pyquote.py
src/pyquote/: __init__.py
tests/: test_pyquote.py
